--- a/.smbdeleteAAA0c004.4
+++ b/.smbdeleteAAA0c004.4
@@ -423,29 +423,26 @@ Weltspielplatzes ein.
 			</h1>		
 		</div>
 	</div>
-	<div class="row kontakt fliesstext">
+	<div class="row spenden fliesstext">
 		<div class="col-xs-12">
-			<p>Bildnachweise: Workshopbilder: Ahner/Brehm, Wolkenkratzer: Flügelwesen / photocase.de, Fußballer: frau.L. / photocase.de, Afrikanische Giraffe: jock+scott / photocase.de, Chinesische Mauer: ad Rian / photocase.de, Arktis: Gurkentanz / photocase.de, Käse: Francesca Schellhaas / photocase.de, Ozean: behrchen / photocase.de, Mädchen 1 / 2 / 3: chocolatto / like.eis.in.the.sunshine / hueterlukas / photocase.de, Panoramen 1 / 2: Clemens Fait/p>
-			<p>Verantwortlich für den Inhalt ist das Bezirksamt Treptow Köpenick, Straßen- und Grünflächenamt. Neue Krugallee 4, 12435 Berlin. http://www.berlin.de/ba-treptow-koepenick/ </br>Tel: (030) 90297-5823, E-Mail: ingrid.lehmann@ba-tk.berlin.de</br>Umsetzung durch Clemens Fait</p>		
+			<ul>Bildnachweise
+				<li>Workshopbilder: Ahner/Brehm</li>
+				<li>Wolkenkratzer: Flügelwesen / photocase.de</li>
+				<li>Fußballer: frau.L. / photocase.de</li>
+				<li>Afrikanische Giraffe: jock+scott / photocase.de</li>
+				<li>Chinesische Mauer: ad Rian / photocase.de</li>
+				<li>Arktis: Gurkentanz / photocase.de</li>
+				<li>Käse: Francesca Schellhaas / photocase.de</li>
+				<li>Ozean: behrchen / photocase.de</li>
+				<li>Mädchen 1 / 2 / 3: chocolatto / like.eis.in.the.sunshine / hueterlukas / photocase.de</li>
+				<li>Panoramen 1 / 2: Clemens Fait</li>
+			</ul>
+			<p>Verantwortlich für den Inhalt ist das Bezirksamt Treptow Köpenick, Straßen- und Grünflächenamt. Neue Krugallee 4, 12435 Berlin. http://www.berlin.de/ba-treptow-koepenick/ </br>Tel: (030) 90297-5823, E-Mail: ingrid.lehmann@ba-tk.berlin.de</p>
+			<p>Umsetzung durch Clemens Fait</p>		
 		</div>
 	</div>
 	
 </div>
 
-<!-- Piwik -->
-<script type="text/javascript">
-  var _paq = _paq || [];
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//analyse.fait.de/";
-    _paq.push(['setTrackerUrl', u+'piwik.php']);
-    _paq.push(['setSiteId', 2]);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-<noscript><p><img src="//analyse.fait.de/piwik.php?idsite=2" style="border:0;" alt="" /></p></noscript>
-<!-- End Piwik Code -->
 </body>
 </html>
